--- a/build.gradle
+++ b/build.gradle
@@ -1,44 +1,46 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
+    id 'org.jetbrains.kotlin.jvm' version '1.5.31'
     id 'maven-publish'
 }
 
 ext {
     ver = [
-            javalin: '3.13.0',
-            aws: '1.11.817'
+            javalin: '3.13.0'
     ]
 }
 
 repositories {
     mavenCentral()
-    maven { url 'https://jitpack.io' }
+//    maven { url 'https://jitpack.io' }
 }
 
-dependencies {
-    compileOnly "org.jetbrains.kotlin:kotlin-stdlib"
-    compileOnly group: 'log4j', name: 'log4j', version: '1.2.17'
 
-    // javalin
+
+dependencies {
+    compileOnly platform("org.http4k:http4k-bom:4.14.1.4")
+    compileOnly platform("com.amazonaws:aws-java-sdk-bom:1.11.817")
+
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib"
+
     compileOnly group: 'io.javalin', name: 'javalin', version: ver.javalin
     compileOnly group: 'io.javalin', name: 'javalin-openapi', version: ver.javalin
-
-    // aws
-    compileOnly group: 'com.amazonaws', name: 'aws-java-sdk-dynamodb', version: ver.aws
-
-    // jdbc
-    compileOnly group: 'mysql', name: 'mysql-connector-java', version: '8.0.20'
-
-    // http4k
-    compileOnly platform("org.http4k:http4k-bom:4.7.1.0")
+    compileOnly group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha5'
+    compileOnly group: 'com.amazonaws', name: 'aws-java-sdk-dynamodb'
     compileOnly "org.http4k:http4k-contract"
     compileOnly "org.http4k:http4k-format-jackson"
-    compileOnly 'org.webjars.npm:redoc:2.0.0-rc.53'  // TODO download client-side instead
-    compileOnly  'org.webjars:swagger-ui:3.47.1'   // TODO download client-side instead
+    compileOnly "org.http4k:http4k-format-jackson-yaml"
+    compileOnly "org.http4k:http4k-format-moshi"
+    compileOnly "org.http4k:http4k-format-gson"
 
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
-    testImplementation 'org.assertj:assertj-core:3.13.2'
-    testImplementation 'com.github.javalin:javalin-test:0.4.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'io.kotest:kotest-runner-junit5-jvm:4.6.3'
+//    testImplementation 'com.github.javalin:javalin-test:0.4.0'
+    testImplementation group: "org.http4k", name: "http4k-testing-kotest"
+}
+
+configurations { // don't want to bundle dependencies in library, but they are needed in tests
+    testImplementation.extendsFrom compileOnly
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -53,4 +55,18 @@ publishing {
             artifact sourcesJar
         }
     }
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "11"
+    kotlinOptions {
+        languageVersion = "1.5"
+    }
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "11"
+}
+
+test {
+    useJUnitPlatform()
 }
