--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Test all supported JDKs on all systems
+name: Test modern LTS JDKs on all OS's
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: 8
+          java-version: 11
           distribution: adopt
 
       - name: Build Coverage
@@ -31,7 +31,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java_version: [8, 11]
+        java_version: [ 11 ]
         os: [windows-latest, macOS-latest, ubuntu-latest]
         distribution: [ adopt ]
     steps:
