--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     testImplementation 'io.kotest:kotest-runner-junit5-jvm:4.6.3'
 //    testImplementation 'com.github.javalin:javalin-test:0.4.0'
     testImplementation group: "org.http4k", name: "http4k-testing-kotest"
+    testImplementation 'com.h2database:h2:1.4.197'
 }
 
 configurations { // don't want to bundle dependencies in library, but they are needed in tests
