--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,8 @@ publishing {
     }
 }
 
+sourceCompatibility = 11
+targetCompatibility = 11
 compileKotlin {
     kotlinOptions.jvmTarget = "11"
     kotlinOptions {
