--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ ext {
 
 repositories {
     mavenCentral()
-//    maven { url 'https://jitpack.io' }
+    maven { url 'https://jitpack.io' }
 }
 
 
@@ -20,13 +20,18 @@ repositories {
 dependencies {
     compileOnly platform("org.http4k:http4k-bom:4.14.1.4")
     compileOnly platform("com.amazonaws:aws-java-sdk-bom:1.11.817")
+//    api platform("dev.forkhandles:forkhandles-bom:1.11.2.1")
 
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib"
+
+//    api("dev.forkhandles:result4k")
 
     compileOnly group: 'io.javalin', name: 'javalin', version: ver.javalin
     compileOnly group: 'io.javalin', name: 'javalin-openapi', version: ver.javalin
     compileOnly group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha5'
     compileOnly group: 'com.amazonaws', name: 'aws-java-sdk-dynamodb'
+    compileOnly group: 'com.amazonaws', name: 'aws-java-sdk-sqs'
+    compileOnly "org.http4k:http4k-core"
     compileOnly "org.http4k:http4k-contract"
     compileOnly "org.http4k:http4k-format-jackson"
     compileOnly "org.http4k:http4k-format-jackson-yaml"
@@ -38,7 +43,8 @@ dependencies {
     testImplementation 'io.kotest:kotest-runner-junit5-jvm:4.6.3'
 //    testImplementation 'com.github.javalin:javalin-test:0.4.0'
     testImplementation group: "org.http4k", name: "http4k-testing-kotest"
-    testImplementation 'com.h2database:h2:1.4.197'
+    testImplementation 'com.h2database:h2:1.4.200'
+    testImplementation 'com.github.oharaandrew314:mock-aws-java-sdk:1.0.0-alpha.2'
 }
 
 configurations { // don't want to bundle dependencies in library, but they are needed in tests
