--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 //    testImplementation 'com.github.javalin:javalin-test:0.4.0'
     testImplementation group: "org.http4k", name: "http4k-testing-kotest"
     testImplementation 'com.h2database:h2:1.4.200'
-    testImplementation 'com.github.oharaandrew314:mock-aws-java-sdk:1.0.0-alpha.2'
+    testImplementation 'com.github.oharaandrew314:mock-aws-java-sdk:1.0.0-beta.2'
 }
 
 configurations { // don't want to bundle dependencies in library, but they are needed in tests
