:sparkles: add feature flags and java-http config loaders

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compileOnly "org.http4k:http4k-format-jackson-yaml"
     compileOnly "org.http4k:http4k-format-moshi"
     compileOnly "org.http4k:http4k-format-gson"
+    compileOnly 'io.split.client:java-client:4.3.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
