--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,13 @@ dependencies {
     compileOnly 'io.split.client:java-client:4.3.0'
     compileOnly group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    testImplementation 'io.kotest:kotest-runner-junit5-jvm:4.6.3'
+    testImplementation 'io.kotest:kotest-runner-junit5-jvm:5.0.3'
     testImplementation group: "org.http4k", name: "http4k-testing-kotest"
     testImplementation 'com.h2database:h2:1.4.200'
     testImplementation 'com.github.oharaandrew314:mock-aws-java-sdk:1.0.0-beta.2'
+    testImplementation 'org.slf4j:slf4j-log4j12:2.0.0-alpha5'
 }
 
 configurations { // don't want to bundle dependencies in library, but they are needed in tests
