--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.5.31'
+    id 'org.jetbrains.kotlin.jvm' version '1.6.20'
     id 'maven-publish'
     id 'jacoco'
 }
@@ -22,20 +22,21 @@ dependencies {
     compileOnly group: 'com.amazonaws', name: 'aws-java-sdk-dynamodb'
     compileOnly group: 'com.amazonaws', name: 'aws-java-sdk-sqs'
     compileOnly('software.amazon.awssdk:sqs')
+    compileOnly('software.amazon.awssdk:dynamodb-enhanced')
     compileOnly "org.http4k:http4k-core"
     compileOnly "org.http4k:http4k-contract"
     compileOnly "org.http4k:http4k-format-jackson"
     compileOnly "org.http4k:http4k-format-jackson-yaml"
     compileOnly "org.http4k:http4k-format-moshi"
     compileOnly "org.http4k:http4k-format-gson"
-    compileOnly 'io.split.client:java-client:4.3.0'
+    compileOnly 'io.split.client:java-client:4.4.2'
     compileOnly group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
+    compileOnly 'com.h2database:h2:2.1.210'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    testImplementation 'io.kotest:kotest-runner-junit5-jvm:5.0.3'
+    testImplementation 'io.kotest:kotest-runner-junit5-jvm:5.2.2'
     testImplementation group: "org.http4k", name: "http4k-testing-kotest"
-    testImplementation 'com.h2database:h2:1.4.200'
     testImplementation 'com.github.oharaandrew314:mock-aws-java-sdk:1.0.0-beta.2'
     testImplementation 'org.slf4j:slf4j-log4j12:2.0.0-alpha5'
 }
