--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java_version: [ 11 ]
+        java_version: [ 11, 17 ]
         os: [windows-latest, macOS-latest, ubuntu-latest]
         distribution: [ adopt ]
     steps:
@@ -45,4 +45,4 @@ jobs:
           distribution: ${{ matrix.distribution }}
 
       - name: Test
-        run: sh ./gradlew check
+        run: sh ./gradlew check --stracktrace --debug
