--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java_version: [ 11, 17 ]
+        java_version: [ 11, 17, 21 ]
         os: [windows-latest, macOS-latest, ubuntu-latest]
         distribution: [ adopt ]
     steps:
@@ -47,6 +47,7 @@ jobs:
       - name: Test
         run: sh ./gradlew check --stacktrace
   publish:
+    needs: [ test, coverage ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout latest code
