--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up JDK
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: 11
-          distribution: adopt
+          distribution: temurin
 
       - name: Build Coverage
         run: sh ./gradlew check jacocoTestReport
@@ -33,7 +33,7 @@ jobs:
       matrix:
         java_version: [ 11, 17, 21 ]
         os: [windows-latest, macOS-latest, ubuntu-latest]
-        distribution: [ termium ]
+        distribution: [ temurin ]
     steps:
       - name: Checkout latest code
         uses: actions/checkout@v1
@@ -57,7 +57,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: 11
-          distribution: termium
+          distribution: temurin
 
       - name: Publish
         run: sh ./gradlew publish
