:rocket: disable config cache for publish

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,4 +61,4 @@ jobs:
           distribution: temurin
 
       - name: Publish
-        run: sh ./gradlew publish
+        run: sh ./gradlew publish --no-configuration-cache
