:rocket: inject secrets into env

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,8 +62,8 @@ jobs:
 
       - name: Publish
         env:
-          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.central_user }}
-          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.central_pass }}
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.central_username }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.central_password }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.signing_key }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.signing_key_password }}
         run: sh ./gradlew publish --no-configuration-cache
