--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,13 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+version.com.github.fppt..jedis-mock=1.1.10
+
+version.redis.clients..jedis=5.2.0
+##               # available=5.3.0-beta1
+##               # available=6.0.0-beta1
+##               # available=6.0.0-beta2
+
 version.software.amazon.awssdk..bom=2.31.11
 
 version.org.slf4j..slf4j-log4j12=2.0.17
